# MeowTalk

./: .gitignore  .windsurfrules  App.tsx  app.json  check-audio-enums.js  check-constants.js  declaration.d.ts  eas.json  golangsdk.md  meowtalk.md  metro.config.js  package-lock.json  package.json  readme.md  record-stream.md  sdk.md  webpack.config.js  workon.md  workspace.md
MeoTalk/: MeowTalker设计文档.md  V1.0版本Todo.md  猫叫检测功能设计.md
MeoTalk/.obsidian/: workspace.json
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  meow_bridge.c
cmd/process_samples/: main.go  process_audio.py
doc/: 视频AI通话.md
go_sdk/bridge/: bridge.go
go_sdk/core/: audio_feature.go  meow_detector.go
sdk/: build.bat  go.mod  go.sum  integration_test.go  main.go  main_test.go  make.md  mock_main.go  mock_stream.go  new_sample_library.json  optimize.md  recording.go  run_mock_server.bat  sample_library.go  sample_library.json  sample_library_test.go  sound_identify.go  sound_identify_test.go  stream.go  stream.md  stream_test.go  test_utils.go  thinking.md  types.go
src/components/: AIRecognition.tsx  AITranslater.tsx  AudioRecorder.tsx  ChatMessageList.tsx  ChatMessages.tsx  EmojiPanel.tsx  EmojiPopup.tsx  HomePage.tsx  ListeningPanel.tsx  RecordButton.tsx  RecordingAnimation.tsx  TestAudioPage.tsx  TranslatePage.tsx  VideoAITrans.tsx  VideoAITransNative.tsx
src/config/: emotions.ts  mock.ts
src/contexts/: AudioAnalysisContext.tsx  ChatContext.tsx
src/navigation/: AppNavigator.tsx
src/screens/: ChatScreen.tsx
src/sdk/: AudioDataManager.ts  AudioRecorder.web.ts  (+13 more)
(+22 files in other folders)
